2009-11-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/list.py:
	  More display fixes.

2009-11-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/shows/edit.js:
	* couchdb/templates/edit.html:
	  Allow passing description as a GET parameter

2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	* python/things/command/project.py:
	  Colorize short id display too.

2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	  Extract Displayer._color()
	  Add Displayer.project()
	* python/things/command/project.py:
	  Use it to colorize the project list output.

2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	  Create a Displayer class, that knows about coloring.
	* python/things/command/main.py:
	* python/things/command/project.py:
	  Use it.

2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/views/open-projects-by-priority (added):
	* couchdb/views/open-projects-by-priority/reduce.js (added):
	* couchdb/views/open-projects-by-priority/map.js (added):
	  Add a new view to show open projects by priority, completion status,
	  and the thing id giving it the priority.
	* python/things/model/couch.py:
	  Don't default to include_docs=True
	  Add a load to load things by id.
	* python/things/command/list.py:
	  Add include_docs=True where needed.
	* python/things/command/main.py:
	* python/things/command/project.py (added):
	  Add project subcommand.

2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/vendor/couchapp/priority.js (added):
	  Factor out a priority function.
	* couchdb/views/open-things-by-priority/map.js:
	  Use it.

2009-11-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	  Factor out a command to display priority.
